[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

bollard = "0.19.4"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
